Removed the Error
Error cause while calculating revenue per segment is resolved.
Created a flexible code for generating revenue by segment

--- a/Customer Analytics/Purchase Analytics.ipynb
+++ b/Customer Analytics/Purchase Analytics.ipynb
@@ -1179,7 +1179,7 @@
    "source": [
     "***P.S - Brands are ordered from Cheap to Expensive (Left to Right)***\n",
     "\n",
-    "*Career focused segement like the expensive brands chocolate,\n",
+    "*Career focused and Well-off segment like the expensive brand chocolates,\n",
     "Standard customers are scattered heterogenously along the scale.*"
    ]
   },
@@ -1192,163 +1192,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1596: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1745: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  isetter(ilocs[0], value)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "temp = df_purchase_predictors[df_purchase_predictors['Brand'] == 1]\n",
-    "temp.loc[:,'Rev_Brand_1'] = temp['Price_1'] * temp['Quantity']\n",
-    "\n",
+    "%%capture\n",
+    "brands = [1,2,3,4,5]\n",
     "seg_brand_rev = pd.DataFrame()\n",
-    "seg_brand_rev[['Segment','Rev_Brand_1']] = temp[['Segment','Rev_Brand_1']].groupby(['Segment'], as_index=False).sum() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1596: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1745: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  isetter(ilocs[0], value)\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp = df_purchase_predictors[df_purchase_predictors['Brand'] == 2]\n",
-    "temp.loc[:,'Rev_Brand_2'] = temp['Price_2'] * temp['Quantity']\n",
     "\n",
-    "seg_brand_rev[['Segment','Rev_Brand_2']] = temp[['Segment','Rev_Brand_2']].groupby(['Segment'], as_index=False).sum() "
+    "for i in brands:\n",
+    "    # create a temp dataset for a particular brand\n",
+    "    temp = df_purchase_predictors[df_purchase_predictors['Brand'] == i]\n",
+    "    \n",
+    "    str_ind = str(i)\n",
+    "    brand_name = 'Rev_Brand_'+str_ind\n",
+    "    brand_price = 'Price_'+str_ind\n",
+    "    \n",
+    "    # calculate revenue per brand/per segment\n",
+    "    temp.loc[:,brand_name] = temp[brand_price].multiply(temp['Quantity'])\n",
+    "    seg_brand_rev[['Segment',brand_name]] = temp[['Segment',brand_name]].groupby(['Segment'], as_index=False).sum() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1596: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1745: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  isetter(ilocs[0], value)\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp = df_purchase_predictors[df_purchase_predictors['Brand'] == 3]\n",
-    "temp.loc[:,'Rev_Brand_3'] = temp['Price_3'] * temp['Quantity']\n",
-    "\n",
-    "seg_brand_rev[['Segment','Rev_Brand_3']] = temp[['Segment','Rev_Brand_3']].groupby(['Segment'], as_index=False).sum() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1596: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1745: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  isetter(ilocs[0], value)\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp = df_purchase_predictors[df_purchase_predictors['Brand'] == 4]\n",
-    "temp.loc[:,'Rev_Brand_4'] = temp['Price_4'] * temp['Quantity']\n",
-    "\n",
-    "seg_brand_rev[['Segment','Rev_Brand_4']] = temp[['Segment','Rev_Brand_4']].groupby(['Segment'], as_index=False).sum() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1596: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1745: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  isetter(ilocs[0], value)\n"
-     ]
-    }
-   ],
-   "source": [
-    "temp = df_purchase_predictors[df_purchase_predictors['Brand'] == 5]\n",
-    "temp.loc[:,'Rev_Brand_5'] = temp['Price_5'] * temp['Quantity']\n",
-    "\n",
-    "seg_brand_rev[['Segment','Rev_Brand_5']] = temp[['Segment','Rev_Brand_5']].groupby(['Segment'], as_index=False).sum() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1332,7 @@
        "Fewer Opportunities      2380.59       22622.59            0.406  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,21 +1340,26 @@
    "source": [
     "seg_brand_rev['Seg_proportions'] = seg_prop['Segment_Prop']\n",
     "seg_brand_rev['Segment'] = seg_brand_rev['Segment'].map({\n",
-    "    0:'Career-Focused',\n",
-    "    1:'Standard',\n",
-    "    2:'Well-off',\n",
-    "    3:'Fewer Opportunities'})\n",
+    "                                                        0:'Career-Focused',\n",
+    "                                                        1:'Standard',\n",
+    "                                                        2:'Well-off',\n",
+    "                                                        3:'Fewer Opportunities'})\n",
     "seg_brand_rev = seg_brand_rev.set_index(['Segment'])\n",
     "\n",
     "seg_brand_rev"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "***Output***\n",
+    "\n",
+    "1. *Career-focused segment generate the most revenue, majority from brand 5*\n",
+    "2. *Standard segement spend their money on lower end brands 1,2,3*\n",
+    "3. *Well-off customers are hooked on brand 4 and somewhat to brand 5*\n",
+    "4. *The last segment customers spend most of their money on Brand 2*"
+   ]
   }
  ],
  "metadata": {
