Changed directory inputs
After restructuring the folders, updated the code where we access files.

--- a/Code Base/Purchase Analytics.ipynb
+++ b/Code Base/Purchase Analytics.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_purchase = pd.read_csv('purchase data.csv')"
+    "df_purchase = pd.read_csv('../Data/purchase data.csv')"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = pickle.load(open('scaler.pickle','rb'))"
+    "scaler = pickle.load(open('../Model/scaler.pickle','rb'))"
    ]
   },
   {
@@ -282,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = pickle.load(open('pca.pickle','rb'))"
+    "pca = pickle.load(open('../Model/pca.pickle','rb'))"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans_pca = pickle.load(open('kmeans_pca.pickle','rb'))"
+    "kmeans_pca = pickle.load(open('../Model/kmeans_pca.pickle','rb'))"
    ]
   },
   {
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
        "Fewer Opportunities      2380.59       22622.59            0.406  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
