--- a/Code Base/Segmentation.ipynb
+++ b/Code Base/Segmentation.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_seg = pd.read_csv('segmentation data.csv', index_col=0)"
+    "df_seg = pd.read_csv('../Data/segmentation data.csv', index_col=0)"
    ]
   },
   {
@@ -1461,20 +1461,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pickle.dump(scaler, open('scaler.pickle','wb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(pca, open('pca.pickle','wb'))"
+    "pickle.dump(scaler, open('../Model/scaler.pickle','wb'))"
    ]
   },
   {
@@ -1483,7 +1474,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(kmeans_pca, open('kmeans_pca.pickle','wb'))"
+    "pickle.dump(pca, open('../Model/pca.pickle','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(kmeans_pca, open('../Model/kmeans_pca.pickle','wb'))"
    ]
   }
  ],
